[package]
name = "rustic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["lua51", "vendored", "module","serialize"] }
rustic-mountain-core = { path = "../../rustic-mountain/core"}
serde = {version = "*", features =["derive"]}
rand = "*"